Booking Fitur is Completed

--- a/Sistem-Manajemen-Bengkel/SMB_Form/Karyawan-SuperAdmin/BookingForm/DetailBookingForm.resx
+++ b/Sistem-Manajemen-Bengkel/SMB_Form/Karyawan-SuperAdmin/BookingForm/DetailBookingForm.resx
@@ -1083,4 +1083,15 @@
         EEIIIYQQQkg9878BUVEH1QaNBbMAAAAASUVORK5CYII=
 </value>
   </data>
+  <data name="ButtonBack.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wAAADsABataJCQAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAESSURBVFhH7ddP
+        LgRBFAfgIbEjJCwkOAGWXMGfLWFtxwk4gIW7uIOFuIYDsCUhNp8UXZPJM93TPSYykvq29ct7L13prupe
+        r/ivsIsrrMa1YXCKC8zFtc5wiHffHrESM4NwU2WTW8zETGuheXYWc1lonq3FXCs1zZ+wHrNJTfM7zMbs
+        SNjHWyiWmm/FbILrkE0esBCzI5XmoVhp/kNpHozdfAmvsRqOYjapPkrRB5ZjthUs4iVWxHHMJjiIwWqA
+        xnOhEfaGbMEztmM2megWZNMyRN2hszmQ6R+pNYfOPeb7RbualidRhvhShsga3o6NmE1q3o7xrmRZzRB/
+        cynNfnstj+tjwQ4uO/yYnOB8Ij8mxSR9AmY84yuZ5G/rAAAAAElFTkSuQmCC
+</value>
+  </data>
 </root>
