--- a/Sistem-Manajemen-Bengkel/SMB_Form/LoginForm.resx
+++ b/Sistem-Manajemen-Bengkel/SMB_Form/LoginForm.resx
@@ -117,4 +117,16 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="ButtonBack.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        vAAADrwBlbxySQAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAESSURBVFhH7ddP
+        LgRBFAfgIbEjJCwkOAGWXMGfLWFtxwk4gIW7uIOFuIYDsCUhNp8UXZPJM93TPSYykvq29ct7L13prupe
+        r/ivsIsrrMa1YXCKC8zFtc5wiHffHrESM4NwU2WTW8zETGuheXYWc1lonq3FXCs1zZ+wHrNJTfM7zMbs
+        SNjHWyiWmm/FbILrkE0esBCzI5XmoVhp/kNpHozdfAmvsRqOYjapPkrRB5ZjthUs4iVWxHHMJjiIwWqA
+        xnOhEfaGbMEztmM2megWZNMyRN2hszmQ6R+pNYfOPeb7RbualidRhvhShsga3o6NmE1q3o7xrmRZzRB/
+        cynNfnstj+tjwQ4uO/yYnOB8Ij8mxSR9AmY84yuZ5G/rAAAAAElFTkSuQmCC
+</value>
+  </data>
 </root>
