--- a/Sistem-Manajemen-Bengkel/SMB_Form/Karyawan-SuperAdmin/BookingForm/DetailBookingForm.resx
+++ b/Sistem-Manajemen-Bengkel/SMB_Form/Karyawan-SuperAdmin/BookingForm/DetailBookingForm.resx
@@ -118,6 +118,215 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="ButtonInformationBatalBooking.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAgAAAAIACAYAAAD0eNT6AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        vwAADr8BOAVTJAAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAC9bSURBVHhe7d0J
+        lB1VnfhxIKCgsuqIQEjXrW4IEBAljg4KwyaCC46iIMMozl/nj9uMODPHccZlTnR0Bgcl2Om61Q+IyGIG
+        GmWLkGAUQVllGZU1CURBgZCll7r1eu++/3M7nfmPv6okvbyllu/3nM85HLb0q+Xe2++9qtppJyIiIiIi
+        IiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIi
+        IiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIi
+        IiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIqpTCyt2t3m6d9/W0Lx2nu71
+        HX9JfFSrri50/I74FF/Hb2/R1Xcqbc5y3F+7v+f+2f/8e0vio7b+95P/r33d/1v+eURERFSH2trty/2O
+        6NCWwJykQnO2H5pPqdB8xQ/NJUpHV/s6uk3p+AGlzTNKmz6lja0z92c84/7MLX+2+xnMYqXNlyd+Nreg
+        CMxJfmffIe5nl6+HiIiIJn9jP3hJ9UD3W7ebPD0dfUFpU1HarJqc1EdTJuE86VbaPKS06fJ1fKHS5nz3
+        bkNbh1kw92K7h9weREREherERXbXlsAc7gXmQ0qbbygd36J0vK4AE/xsjGzZBm5bmG+4dzjcNnLbSm4/
+        IiKizOc+L/eD6DgviC+Y/G3+bqVNNWUCRLphX5vHJ941CMwiFURntFSqB8jtTERE1Ly67Bz3drZ7a1vp
+        6KrJt+3lhIbaeEHpeLn7mMQtsBZ02ZfJ3UFERFSXFgQbXjXx2/3EZ/Xx8snPuOVEhYaIY/fuysR3C4Lo
+        DPfOi9xfREREM+rAin2F31l9l9KmXWnzq5J/Zp91bt/8twrMd9yljXzJkIiIppW79n3LW/qmS2ljUiYa
+        5MOAu5rCvVvjrrKQ+5mIiEqe+01x4kY4Wy5TeyJlIkEhTFx14b6UeVZb++a95HFAREQlaO7lffupIPq4
+        0mal0mYwOVmg4AaUjlb4YfQxvjtARFTwvMU9+6ggPm/yy3tDKZMCysl9d+Bud9nmoZXoNfK4ISKiHOa+
+        xOe+IT75eT6/6WNHBicWiEF8Hh8TEBHlLHd9uPuc19fmxskvgslBHpiKAU+bH6rAfJB7DhARZTj30JzJ
+        L/K9lDKYA7Ph7vdQcU9JlMcdERE1IffEucnH2rqH54ynDNxArbmHG53vPl6SxyMREdU599CYyd/2N6YM
+        0EAj9Lp3BbwgfoM8PomIqIa5R+eqMP6I0vH9KYMx0Ez3KR1/2B2j8rglIqIZNn/pxj0nn6z3XMrAC2TJ
+        i+4JhtxbgIhoFnlhjzf5Nn9PykALZJlxzyRQHQMt8rgmIqJt1BJW3zj5aN2RlIEVyJOxLY8w7vszeZwT
+        EdFkvu57t9LmzpRBFMg9X5s73JMl5XFPRFTa3IN4lI4fkAMmUEzx/e7ulPI8ICIqTX4QHed+K0oOkEDx
+        edrc43fEp8jzgoiosLV0RsdOPpAnMSgCJXS3p80J8jwhIipMSsevn3wojxwAAWizyg+qfyrPGyKi3KZ0
+        NF+F5iZu1Qvs0LgfmBv8zr5D5HlERJSbvMU9+0xex89jeIHpGXb3EfAr3XvL84qIKLstsru456nzVD5g
+        1ja5u2Du1GXnyNOMiChTtQTmJKXNr1IGMgAz94QXxqfJ842IqOn5lYF5k3fvkwMXgJqJl8/Tvb48/4iI
+        Gp57Jjqf8wMNNaBC8/W5F9s95PlIRNSQVIf5c6XNUykDFID6e8bdRVOel0REdct9u19pU+GyPqDpxt1H
+        bwd1RK+W5ykRUU1z9zD3tflDykAEoHledFfeyPOViGjWtVSqByhtfpAy8ADIjHh5a9B/sDx/iYimn7U7
+        T17Tvzk52ADIoN6JewcssrvI05mIaEq1tffP5Wl9QG6tmhv2HyTPayKi7eYH5kx3F7KUQQVAfvT4QfyX
+        8vwmIkrkrut39yBPGUgA5FZ01YJgw6vk+U5ENJF7FKnSZk1y8ACQf/G61iB6qzzviajMddk5no6+MPEE
+        ssSgAaBARvzALOLhQkS05R7+obkrZaAAUFSBuZdnChCVOHdTH/clocTgAKAMult09Z1yXCCiImftzpNv
+        +Y+lDAoAymPcPcyLewYQlaC29s17+drcmDIQACgpL4hunad795XjBREVJNUZH+2eICZPfgBQ2qxVOn69
+        HDeIKOf5Oj5XaVNNOekBYKsBL4j+Wo4fRJTDTlxkd3Wf8aWc6ACwLZWFFbubHE+IKCcdWoleo7T5RcrJ
+        DQA7cudBHdGr5bhCRBmvrdLbqrR5KuWkBoAp8bR5WulovhxfiCijtXRGxyptNsiTGQBmYLPS0fFynCGi
+        jKUC80GlTX/KSQwAMzXovkgsxxsiykheEF/AzX0A1Mn4xHMEiCg7bfmmvwlTTlgAqCkviJdyhQBRBnLP
+        +HZ38ZInKQDUTWB+7Fe695bjERE1qLZ28ydKm0cSJycA1N9D7lJjOS4RUZ3zgvh1KjS/STkpAaBRnpgb
+        9h8kxyciqlN+ZWDelvt2J05GAGiweN083evLcYqIalzLkl7lTrjkSQgATfOs39l3iByviKhGtQTmcKXN
+        8yknHwA0V2DW+0vio+S4RUSzrKWjeozSZmPipAOA7Oj2OvreIscvIpphrWH0NqVNb8rJBgBZ0+vGLDmO
+        EdE02zL5x3HKSQYAWWVag+itcjwjoinmBfEb3FtqKScXAGRdr99ZfZMc14hoB7WG5kilzaaUkwoA8mJj
+        W4dZIMc3ItpGrUFfm9LmhZSTCQDy5iWvEh0mxzkiErUG/QcrHf825SQCgLx6zgt7PDneEdFk6rJ4f6XN
+        UyknDwDk3dqWSvUAOe4RlT73UA1Pm8dSThoAKIpHD+qIXi3HP6LS1ta+eS+e6gegJB6av3TjnnIcJCpd
+        Cyt2N6XN7SknCQAUVLTixEV2VzkeEpUqTxudPDkAoPAuk+MhUWlSOvpiykkBACURfV6Oi0SFT4XmbKXN
+        WPKEAIDSGPd1fK4cH4kKmx9ExyltBlJOBgAomwGeG0ClqK3S26q02ZByEgBAWW3yO/sOkeMlUWFy178q
+        bVanHPwAUGqeNk+3tZs/keMmUe6bvNzvF/KgBwD8jzu5PJAKlwrMkpSDHQDwv3hhdLEcP4lym/uWqzzI
+        AQDbEMTnyXGUKHcpHb9eaVNNHOAAgG3pbwmrb5TjKVFumqd793VfbEk5uAEA27fWW9yzjxxXibLfIruL
+        F0S3phzUAIApiZe7sVQOr0SZTgXma8mDGQAwLaH5ihxfiTKbH0bv4Ta/AFATY35n9V1ynCXKXF7Y4ylt
+        elIOYgDAzGxuDfoPluMtUXZaZHdxN7JIOXgBALPz85267Bw57BJlIk+bf005aIHMaA2NPfbK2J68rGrP
+        uH4L99fu77l/Jv99IEv8MPpnOe4SNT2/s/ompc2wPGCBZnKT+xfvHLS3rBmxT24as4Ojdpu5f+b+nZvX
+        jEz8Nyd9v5r4/wFNNuJ19L1Fjr9ETWv/i9a/kof8ICve8r3Y/se9Q3b15jE5x0+7pzaN2X+/d9C++Xtx
+        4s8BmmTt/KUb95TjMFFT8sP4ipSDFGio46+u2it+M2wHRuQ0PvuGx6y9YfUI7wogKypyHCZqeH5gzkw5
+        OIGGOeJSYy95cGhikq53I2N2YpFx5GW8I4CmO0uOx0QNa27Yf5C7PCXlwAQa4tyb++0LZlzO03XveTNu
+        z7mpP/HzAA3UzaWB1JwW2V18be5IOSiBunPf2F/8yyE72vi5/39yf/a3HhiyfsrPBzREYH68k7U7y+GZ
+        qK75oflU4mAEGuDQTjPxrf6sdNOaEXtIZ/LnBBoj+hs5PhPVrYOXVA/kbn9ohsMqxt713Hau5WtSP3t2
+        dOJnkz8v0AC97uNYOU4T1SVfmxtTDkKgrtpCY1c8k53f/GWrfjti23gnAM0QmuvlOE1U81Rozk4cfEAD
+        XPPYsJxzM9eVjw4nfm6gEVrC6P1yvCaqWX6le2+lzfPywAPq7e9+PCDn2sz2uVUDiZ8faIAXvMU9+8hx
+        m6gmeTr+bspBB9TVCddUbXW4iV/3n2ZmaHzipkTydQD15msTynGbaNa1BOYkpc24POCAervjd9n93H9b
+        3fnsaOJ1AA0w3hqak+X4TTTjDqzYV3jaPJ1ysAF19ckV+XnrX/Y3t/FRAJpitXeF3V2O40QzytfxhSkH
+        GVBX7gY77mE8ee2JTWPcJAhN4WvzVTmOE027ebrXV9oMygMMqLfzc/zb/9Y+fivvAqAp+r2wx5PjOdG0
+        UqG5KeXgAurunt9n74Y/0+0Xv+e7AGiaa+V4TjTl3JdJUg4qoO6OvTJu6n3+a9XYuLXHXsWTA9EkHebP
+        5bhOtOO67Bylza8TBxTQABfeNyTn0tz29XsGE68PaJBH3IPb5PBOtN142A+a6e4CvP2/NS4JRDP5YfQx
+        Ob4TbTN3NymlzUZ5IAGN4J72l6cb/+yo/hE78Zrk6wQa5CV3F1c5zhOl5muzOOUgAhrijOurcg7Nfe/u
+        4s6AaB4/jL8px3miRK1BX5vSZkgeQECjXLAq/5f/ydyzDOTrBBpoyO/sO0SO90R/FJf9odku+WVxvgC4
+        tYsfGEq8TqCheGQwba9WXV3I/f7RbO6RukXru7/mMcFouvGWsPpGOe4TTaS0WZly0AANdf2TxVsAuNck
+        XyfQePEtctwn2qk1iN6aPFiAxrtlbf6e/rej3GuSrxNoBq+j7y1y/KeS52tzhzxQgGYo4jsA1z3BOwDI
+        jJVy/KcSp3R0fMpBAjTFFb8p3gJgKd8BQJZwi2DamgrNXYkDBGiSbz1QvKsA/vN+rgJApvxczgNUwrww
+        Pi3l4ACa5jO3F+8+AJ9cyX0AkC0tgTlJzgdUspSO75cHBtBMp19XvDsBvuNa7gSIbPG0uUfOB1SifN33
+        bnlQAM3WFhrbN1icZwG41+Jek3ydQNMF8TvkvEAlic/+kVU/+W1xLgVcuY5LAJFZq+S8QCXI76y+KeVg
+        ADLhX38+KOfR3PalOwcTrw/ICu4OWMKUNtfKAwHIimO+G9vhMTmV5i/3Gtxrka8PyI7oajk/UIFTHQMt
+        SpuR5IEAZMeP1+X/Y4CVz/D2PzJv2K8MzJPzBBU0X5vFKQcBkCnn3NQv59PcdfaN/YnXBWRPdJGcJ6iA
+        tbVv3ktp05c8AIDsefCFUTmn5qb7nh9NvB4goyK/0r23nC+oYHk6+kLKzgcy6UM39ds8XhDofuYP3sBv
+        /8iRMP5HOV9QgVpYsbspbZ5L7Hggw25Ynb/vAnTx+F/kTWh+7+YIOW9QQVJh/JHETgcy7k1XxHZjf37e
+        B3ipOs43/5FLfhj/lZw3qCApHT8gdziQB+fe3G9Hc7AGGBu39sO38NY/ciow98p5gwqQvyQ+KrGzgRy5
+        6P7sPyXwwvt46h/yrTU0R8r5g3KeCswSuaOBvFn662E552amqx/lc3/knx+aS+T8QTlu7sV2D6VNt9zR
+        QN60hmbiC3ZZ69onhid+NvnzAjm02bvC7i7nEcppfPkPReJrYy95MDsfB4SPDE38TPLnBPLKD+K/lPMI
+        5TSlzc/lDgby7u9/MmCrw837ZqD7sz+3aiDxcwF552tzh5xHKIcpHc1X2ozLHQwUwduXVe2vXmr83QL/
+        e/2oPXlZNfHzAAUx7nf2HSLnE8pZSkffTtm5QGG4z96/fNeg7Rms/7sB3QPj9ot3DvJ5PwrP1/GFcj6h
+        HLWgy75MabNB7ligiBZcFtuv3T1o18e1Xwhs7h+f+N7B0Uu5wQ9KIjDruTNgjlOhOTuxU4GCO6xi7Kdv
+        H7A/+e2IHR6TU/nUGxq1dtVvR+ynVg7Y+ZXknwMUnR+YM+W8QjlJheYmuUOBMjniUmPPW95vg4eHJibz
+        dT1jdiRlUeD+nvtn7t9x/+5Hbumf+G/l/w8oldBcL+cVykHzl27cU2kzkNihACZ+o3f363f47R7YpuqC
+        YMOr5PxCGY9r/wEAs+WF5hw5v1DGUzpeLnckAADT4Wtzo5xfKMN5i3v2UdoMyh0JAMA0DfqV7r3lPEMZ
+        zdfR/0nZiQAAzED8YTnPUEZTOlqR3IEAAMxEvFzOM5TB5unefZU2Q8kdCADAjAzPvbxvPznfUMZSOvqb
+        lJ0HAMCMeUH013K+oYyltFkpdxwAALPhBdGtcr6hDLX/Retfybf/AQB1MHBgxb5CzjuUkVQQnZGy0wAA
+        mDUviE+X8w5lJBWaQO4wAABqIjDfkfMOZSRPm6cTOwwAgNpYLecdykBKR/NTdhYAADXTVultlfMPNTlP
+        x5+TOwoAgBr7jJx/qMkpbW5P2VEAANQQdwXMVHMvtnsobfqTOwoAgFqKY+8Ku7uch6hJ+Z3VdyV3EgAA
+        ddAZnyrnIWpSSpv2xA4CAKAuom/LeYialNLm18kdBABAHQTRg3IeoibU1r55L6XNaGIHAQBQHyMLgg2v
+        kvMRNTgvjE9L2TkAANRNa2hOlvMRNTgVmK/JHQMAQF2F5ityPqIG52nz08SOAQCgvlbK+YgaWZedo7Qx
+        KTsGAIB66nNzkJyWqEG1dFSPSdkpAAA0QPx6OS9Rg1La/F1yhwDF0Boae+xVsT3t2qo94/r6OXlZ1b5x
+        aZz48wFsnx+YT8t5iRqU0uZauUOAvDr8UmM/uWLAXvnosH1845gdGLENrXtg3N7z+1F78QND9i9+UE38
+        fAD+mKfN9+W8RA1KafOc3CFA3pyyrGqXPT5so6FxOSc3tWd6xuy/3ztoF1zGuwNAuuh3cl6iBuQF8euS
+        OwPIj2OvjO0ta0bsWLbm/UQ9g+P2G/cM2kM6k68BKLvW0LxWzk9U51QQv0PuCCAvvnzXoK0OZ3zmF63e
+        PGbf3cVHA8D/xg2BmpAK43+UOwLIOvd2+q1PN/jD/Ro2OGrtv9w5mHhdQFl5Ov6cnJ+ozikdfU/uCCDL
+        3rA0tg+9OCrn1FwWPjKUeH1AGXlBvFTOT1TnlDaPyB0BZNVRl8f20Q1jch7NdR0PsQgAeDJggztxkd1V
+        aTOQ2BFABrV1GnvvH4rxm7/MfZdBvl6gZPq5I2ADa+swC1J2ApBJ7u3yojYyZu0HftifeM1AuUTz5TxF
+        dcoLzTnJHQBkz1k39mf+Mr/Ztq5nzM6vJF87UCJnyXmK6pTS5hspOwDIFPfW/1ObivW5/7Zydw+Urx8o
+        jcB8Tc5TVKeUjpcndgCQMZ+/Y1DOk4XN3dPgmO9yx0CUk6/NjXKeojqldLxO7gAgS9yDfJ7uKcdv/1v7
+        zoO8C4DSWivnKapDCyt2N6XNaMoOADLj3Jv75fxY+NbH47YtTG4LoASGuRKgAc3TvX7Kxgcy5fonh+X8
+        WIo+cgtXBKCc/MrAPDlfUY3zO+JT5IYHssb9NlzGlv5qOLEtgDLwtDlBzldU41QQfVxueCBLTv2vqpwX
+        S9MTm8YS2wMoA0/HH5XzFdU4pc2/yQ0PZMlnVw3IebE0uRsD8dhglJEfmEVyvqIapwJzjdzwQJZc8svi
+        3vlvKp2yjEcGo4yi78n5imqc0ubu5IYHsuOax8r5BcCtnXMTXwRECYXmLjlfUY1T2jyf2PBAhty4ekTO
+        iaXq47cOJLYJUALPyvmKalhbu3250mYsZcMDmXHzmnIvAD5zOwsAlNLogi77MjlvUY3yO6JDUzY6kCnL
+        Hi/3RwAsAFBWbZXeVjlvUY1qDc3JcoMDWaMfLveXAFkAoKy80Jwo5y2qUSo0Z8sNDmRNmR4ClBYLAJSV
+        H5oPyHmLapQfmE/LDQ5kzXuvL++NgFwsAFBWXmg+IectqlEqNF+RGxzIGvdAnL7Bct4K2MUCAOUVfVHO
+        W1Sj/NBcktzgQPasXFfeKwFYAKC8om/LeYtqFHcBRF58+vby3g6YBQDKK7pSzltUo5SOViQ3OJA98yvG
+        buov58cALABQXvGP5LxFNUoF0YPJDQ5k0zfvK+flgCwAUF7x/XLeohqldLwuucGBbDrysti+VC3fuwAs
+        AFBia+W8RTVKaROlbHAgsy4o4aOBWQCgxHrkvEU1yN1jWWkznrLBgUxb8Uy5rghgAYASG19YsbvJ+Ytm
+        2dzL+/ZL2dhA5h29NLa/6x2T82RhYwGAMvMr3XvL+YtmWUuleoDc0EBenHBN1W4oyfcBWACgzFpD81o5
+        f9EsUx0DLXJDA3ly+nVVuz4u/iKABQDKrDXoP1jOXzTLeBQwiuD4q6t29eZifxzAAgBlxiOB61BraI6U
+        GxrIoyMuNfa6J4blvFmYWACgzOZ1miPk/EWzrKWjeozc0ECenXtzv13TXbx3A1gAoMy8IH6DnL9olrV0
+        RsfKDQ3knXty4GdXDdjHNhZnIcACAGXmdfS9Rc5fNMs8bU6QGxookndeV7XBw0P2kfWjdjTH6wEWACi3
+        6Hg5f9EsU53xqckNDRTTYZUtC4JPrBiw/3THoL02R98ZYAGAMvN1/HY5f9Es88PoPXJDA2XhJtW8xAIA
+        ZeZ3Vt8l5y+aZX5gzpQbGigLFgBAPrSE0fvl/EWzjAUAyowFAJAPLADqEB8BoMxYAAD5wEcAdYgvAaLM
+        WAAA+cCXAOsQlwGizFgAAHnBZYA1jxsBocxYAAD5wI2A6hC3AkaZsQAA8oFbAdchHgaEMmMBAOQDDwOq
+        Q35n3yFyQwNlwQIAyAceB1yHVMdAi9zQQFmwAADyoa29f66cv2iWtVSqB8gNDZQFCwAgH1pD81o5f9Es
+        m3t5335yQwNlwQIAyAe/0r23nL9oli2s2N2UNuNyYwNlwAIAyIXxExfZXeX8RTVIadOXssGBwmMBAORC
+        t5y3qEYpbZ5J2eBA4bEAAHJhjZy3qEYpHf0yZYMDhccCAMiF++S8RTXK19FtKRscKDwWAEAexMvlvEU1
+        Suno6uQGB4qPBQCQB9H35LxFNcrXZnFygwPFxwIAyIEg+pact6hGKW2+nNjgQAmwAACyz9fRv8h5i2qU
+        H5pPyQ0OlAELACAXzpfzFtUopc1ZKRscKDwWAED2+YE5U85bVKNaAnOS3OBAGbAAALLP0+YEOW9RjfI7
+        okPlBgfKgAUAkH08CriOtbXblyttxuRGB4qOBQCQeaMLuuzL5LxFNczX5g8pGx4oNBYAQOY9K+crqnFK
+        m7tTNjxQaCwAgMy7U85XVOO4GyDKiAUAkHXcBbDuKW3+LbnhgWJjAQBkmx+YRXK+ohqngujjcsMDRccC
+        AMg2T8cflfMV1bjW0JwsNzxQdCwAgIzrMH8u5yuqcfN0r5/Y8EDBsQAAss2vDMyT8xXVuBMX2V2VNiNy
+        4wNFxgIAyLThnbrsHDlfUR1SOl6XsgOAwmIBAGTaWjlPUZ1S2tycsgOAwmIBAGSXH5gb5DxFdUqF5uty
+        BwBFxgIAyC4uAWxgXmA+JHcAUGQsAIDs8kPzATlPUZ1qCczhcgcARcYCAMguv7PvEDlPUb3qsnOUNv1y
+        JwBFxQIAyKzqTovsLnKaojrmh+bhlB0BFBILACCr4gfk/ER1zg/jK5I7AigmFgBAVsWXy/mJ6pyv439I
+        7gigmFgAANnkBfEFcn6iOufr+O1yRwBFxQIAyKaWwJwk5yeqc23t5k/kjgCKigUAkE1uLpLzEzUgpc2z
+        cmcARcQCAMiieJ2cl6hBeaFZltwhQPGwAACyKLpazkvUoFRo/ja5Q4DiYQEAZI+nzSflvEQNqiWsvlHu
+        EKCIWAAA2eMviY+S8xI1qi13BOyTOwUoGhYAQOb0cgfAJqe0WZWyY4BCYQEAZIuvo9vkfEQNzj2GUe4Y
+        oGhYAAAZE5gvyfmIGpzqjE9N7BigYFgAANniheZEOR9Rg5u/dOOeSptRuXOAImEBAGTK8IEV+wo5H1ET
+        Utr8d8oOAgqDBQCQJTwBMDOpwHwnuYOA4mABAGRIEH1LzkPUpFp09Z2JHQQUCAsAIDv8jvgUOQ9Rk5p7
+        sd1DaVOVOwkoChYAQFbEcVu7fbmch6iJKR2tSO4ooBhYAABZEd8i5x9qcl4QX5DcUUAxsAAAssEPzKfl
+        /ENNzu+IDpU7CigKFgBANrRVelvl/EMZyNPmabmzgCJgAQBkwlNy3qGMpLTpSNlhQO6xAACaz9dmsZx3
+        KCP5YfQeucOAImABADSfF8anyXmHMtL+F61/pdJmQO40IO9YAABN1+8uOZfzDmUoLgdEEbEAAJot/pGc
+        byhj+WH0seSOA/KNBQDQZEF8npxvKGN5i3v2UdoMJXYekGMsAICmGvQr3XvL+YYymBdEt6bsQCC3WAAA
+        TRSam+Q8QxnNvVWT2IFAjrEAAJrH1/G5cp6hjNbWvnkvrgZAkbAAAJpmwM0pcp6hDKe0uTllRwK5xAIA
+        aJofyPmFMp4fxn+VsiOBXGIBADRJaM6W8wtlvPlLN+7pbtyQ2JlADrEAAJqi6m4wJ+cXykGeNj9M2aFA
+        7rAAAJriWjmvUE5Sgflgyg4FcocFANB4no7eJ+cVykkLuuzLlDYvyZ0K5A0LAKDBArN+YcXuJucVylFK
+        RxcldiyQMywAgMbygvg/5HxCOcvviA5V2ozLnQvkCQsAoKHG/c6+Q+R8QjlMheaulB0M5AYLAKBxPG1+
+        KucRymlKxx+WOxjIExYAQON4oTlHziOU07wr7O5Km81yJwN5wQIAaJhNbs6Q8wjlOKVNe8qOBnKBBQDQ
+        GF4YXSznD8p5/pL4KLmjgbxgAQA0RluHWSDnDypASsf3y50NZFVraOyxV8X2tGur9pv3Dcl5NrO5n9X9
+        zO5n91NeF5BVnjb3yHmDChJfBkSWHX6psZ9cMWCvfHTYPr5xzA6MyKk1f7nX8NjGMfu93wzb81cM2MMq
+        ydcNZIWv43PlvEEFyd3VSWnzrNzpQDOdsqxqlz0+bKOhcTl/Fq6+wXH7/ceH7cnLqontADRVaH7Pnf8K
+        ntLR5xM7HmiCY6+M7S1rRuxY8ef9RKPj1t64esT+2ZVxYrsAzeAH8d/L+YIKVlv75r2UNr1y5wON9OW7
+        Bm11uIQzv8gMjdsv3TmY2D5Ag/X5le695XxBBUzp6NspBwBQdwsui+2tTxfgw/0ad8vaEXvEpcntBTSC
+        r+ML5TxBBa2tvX+u0mZYHgRAPb1haWwfenFUzn002a9eGrXHfJePBNBww61B/8FynqAC54VmWcqBANTF
+        UZfH9tENY3LOI9GTm8bs0UtZBKCRoivl/EAFr1VXFyYPBKD22jqNvfcP/OY/1X7+3KhtC5PbEagHL4jf
+        IOcHKkFKm5/JgwGotfCR/NzEJyu1PzSU2I5AHdwu5wUqSS26+s6UAwKombNu7C/lZX6zzW2zM3/Yn9ie
+        QC35On67nBeoRClt7pMHBVAL7q3/pzbxuf9Mc3cQ5KMA1NHdcj6gkqU641NTDgxg1j5/x6Cc02iafW4V
+        DxZCfXihOVHOB1TClDZ3yoMDmA33IJ+ne/jtf7at6R7jgUKovdD8RM4DVNL8IDoucYAAs3Duzf1yLqMZ
+        9qGb+C4Aai06Xs4DVOLcijB5kAAzc/2Tw3Ieoxl27RPDie0LzJSvo9vk+E8lr6UzOlYeKMBMrY/56n+t
+        cttSbl9gxsK+N8vxn2gntzJMHCzANJ36X1U5h9Esc49MltsZmLbQ3CTHfaKJJu8OOJ44aIBp+OyqATl/
+        0Sz729u5GgCzNs5d/2i7+YG5IeXAAabskl9y579ad/ED3BkQsxSY6+R4T/RHtVV6W5U2g4mDB5iiax7j
+        C4C17upH+SIgZmWwNehrk+M9USIVRN9KOYCAKblx9Yicv2iW3bB6JLGdgWn4hhzniVKbv3TjnkqbF1MO
+        ImCHbl7DAqDWuW0qtzMwJYFZ39a+eS85zhNtMxVE/zdxIAFTsOxxPgKode5jFbmdganwdPxROb4Tbb9F
+        dhelzUPyYAJ2RD/MlwBrXQePB8YM+KF52I3lcngn2mGtYfQ2LgvEdPEQoNr3Dz/hMkBM27i7zbsc14mm
+        nNLmBykHFrBN772eGwHVujOu50ZAmKbAXCPHc6Jp1bKkVyltBhIHF7AN7hn2fYPcCrhWuW3ptqnczsB2
+        9PuVgXlyPCeadio0X085wIBtWrmOKwFq1W1PcwUApik0X5HjONGMamu3L1eBeTJxkAHb8OnbuR1wrfrE
+        Cj7/x7Q85V1hd5fjONGM87Q5gS8EYqrmV4zd1M/HALNtQ3V8YlvK7Qtswxhf/KO6pLS5LOWAA1J98z4u
+        B5xt/37vYGK7AtvRIcdtoprkV7r39rX5Q8pBByQceVlsX6ryLsBMe9GM2wWXxYntCmzD897inn3kuE1U
+        s/zQfCDlwANSXcCjgWfcZ3gEMKbB64j+Qo7XRDWPRwZjOlY8wxUB0+1WvvmP6blWjtNEdamlUj1AadOd
+        chACCUcvje3vesfkHEfb6JmeMXvU5bz1jynrPXhJ9UA5ThPVLS80n0g5EIFUJ1xTnfhGO20/d+XESd/n
+        rn+YOj+MPibHZ6L6Zu3OSptV8mAEtuX066p2fcwiYFu9GI/bd1zL5I9pWenGYjk8E9W9uWH/QUqbTSkH
+        JZDq+KurdvVmPg6QPblpzL7tKt72x7RsdB/HynGZqGG1hNH7Uw5MYJuOuNTY654YlnNgKXPvhyx7fNge
+        fmlyOwHbF71XjsdEDU/p+PLkwQls37k399s13eV9N8C9E3LOTf2J7QLsiKeNluMwUVPa/6L1r3T3n5YH
+        KbAj7il3n101YB/bWJ6FwKMbxuzf/XjAtvKEP8zMEwdW7CvkOEzUtFp1daHSZijlYAWm5J3XVW3w8JB9
+        ZP2oHS3QesC9lofXj9olDw3Z0/iSH2Zn2A+qfyrHX6KmpwLzpZQDFpi2wypbFgTuSXj/dMeg/eovBiee
+        LTAb/3n/kO18ZNh2PTFsf7R2xN6+bovla0cm/p77Z+7fkf/ddLmf1f3M7md3r4GH+aB2os/LcZcoGy2y
+        u/ja3JE8aAEAsxKau3bqsnPksEuUmfzKwDzuEggANbXRXXYtx1uizKU641OVNqMpBzEAYHrGvCA+XY6z
+        RJnN0+ZfUw5kAMA0+GH0z3J8Jcp21u7safNDeTADAKbsZm71S7ls/tKNe6rAPJlyUAMAtm+1X+neW46r
+        RLnJXxIfpXQcpxzcAIB0pq3DLJDjKVHu8kJzTsoBDgBIGlehOVuOo0S5zddmccqBDgD4I/F/yvGTKNct
+        rNjdlDZ3Jg92AIDjafPTExfZXeX4SZT75l7etx8PDQKAFIF5cp7u3VeOm0SFqWVJr1LavJQ4+AGgvDa2
+        Bn1tcrwkKlzuaVZKm2rKSQAAZdPf0hkdK8dJosKmAvNBd4vLlJMBAMpizA/MmXJ8JCp8no6+kHJCAEAp
+        +Dr+BzkuEpUmpU2HPCkAoAQqcjwkKldddo7S8S0pJwcAFJKvo9u43I9o6zMDtHlIniQAUDzxAwuCDa+S
+        4yBRaTu0Er1GafNo8mQBgIIIzW8O6oheLcc/otLXGprX8vRAAAW1pqVSPUCOe0Q0WVt7/1yl49+mnDwA
+        kFfPqY6BFjneEZHI3RFLafN8ykkEAPkSmPVKR/PlOEdE28idMFtOnJQTCgDyYWNbh1kgxzci2kGqMz5a
+        adOdclIBQNb1turqQjmuEdEUaw2ityptTMrJBQBZZbi/P1ENmnx40OaUkwwAsqbH/eIixzEimmEtYfWN
+        SpsNKScbAGTFZhX2vVmOX0Q0y7xKdJivzR9STjoAaLYX/SXxUXLcIqIa1bKkVyltnkk5+QCgSaLfucuX
+        5XhFRDXOrwzMc3fVSp6EANBwT7UG/QfLcYqI6pS6LN5fafPrlJMRABrC1+bxg5dUD5TjExHVOfdQDZ4i
+        CKA54gfmXt63nxyXiKhBucdqKh0vT56cAFA3K9vaN+8lxyMianRddo7SpiPlJAWA2grNpScusrvKYYiI
+        mpgXxBcobcYSJywAzN64H5hFctwhoozkB+ZMpU1/yskLADM14AXmQ3K8IaKM5XX0vUVp81LKSQwA07XJ
+        D6Lj5DhDRBltnu71VWCeTDmZAWCq1vqdfYfI8YWIMt7kZYJ3ppzUALBdnjY/nad795XjChHlJPdtXV/H
+        F7ov8MgTHAC2obKwYneT4wkR5TAvNOcoHccpJzoAbGVUaM6W4wcR5Tz3NEGlzRMpJz0ArGkNzZFy3CCi
+        gjR/6cY9PW1+mHLyAyiteLm3uGcfOV4QUdGydmdPR19Q2owmBwIAJTI6cXOfRXYXOUwQUYHzgvh0pc3m
+        lEEBQPFtVJ3xqXJcIKKS5J7jrbT5WcrgAKCg3CV+be39c+V4QERly30ksOU5AkNyoABQKMO85U9EifzO
+        6puUNk+lDBoA8i4wT7Z0VI+R5z0R0URzL7Z7qMB8JzF4AMix6Kr9L1r/Snm+ExEl8nT0vokvCSUGEgA5
+        slHp6L3y/CYi2m4HL6keqLRZlTKoAMi+lS2V6gHyvCYimlrW7qyC+Dz3SNCUAQZA9vQobc535648nYmI
+        pp0XxK9znyOmDDYAMiNePjfsP0iev0REs84Po/cobZ5LDjwAmugFPzQfkOcrEVFN8yvde09eKTCWMhAB
+        aBz3mO9KW/vmveR5SkRUt1rD6G08XRBomrUtgTlJnpdERA3Ju8Lu7mvzVaVNf8oABaD2qio0X2lrty+X
+        5yMRUcNz9xWf/JKge0tSDlgAaiJe7oU9njz/iIiangr73qy0uS85cAGYhYf8IDpOnm9ERNnq/9874MWU
+        gQzA1L0wcU1/l50jTzMioszm7j3unjymtBlIGdgAbNuQu9KGb/cTUa5rq/S2qtBcz/cDgB0aV4G5bp7u
+        9eV5RESU21pDc6TSpouFAJBqFY/rJaJCp3T8+smFgBwAgTJa5QfVP5XnCRFRYWvpjI7laYMosbu90Jwo
+        zwsiotLkLm9S2vwsZYAEiicw9/od8SnyPCAiKm0qiN+hQvOTxIAJFEFgfuzr+O3yuCcioslUZ3y0e8CJ
+        0mYwMYgC+TLsvu/CZ/xERNPIC+LXTd5HoDtlYAWyLHLX8bcG/QfL45qIiKbY/KUb9/SC+AKlzbMpAy2Q
+        JS+4Rau3uGcfeRwTEdEMW1ixu/lh/FfuS1QpAy/QNJ429/g6PvfERXZXedwSEVEN8yrRYb6OL1TabJCD
+        MdAgPRPfVemMj5bHJxER1Tn3THSlzVmT9xPgDoNohIfcA3oOrNhXyOORiIiakN/Zd8jklwafSxm0gdl4
+        0b3j1Br0tcnjjoiIMpL7rkBLGL1/8gFE/SmDOTAVVfdgHk9H73PHlDzOiIgow8292O6hgugMpaOrlI7j
+        lEEe+N8GlI6XqyA+z119Io8nIiLKYe4z2y2LgYkHEXGTIWw1uHXSb2vfvJc8boiIqEC567S9IPprL4hu
+        5WOCUupXOv6Rp+OP+pXuveXxQUREJch9TODu0T55WaH7hrecLFAMz0zeYvos3t4nIqJELUt6lbvMa/Kj
+        gr6UiQT5UHWXh3o6+kJLYA6X+5mIiGibeVfY3VVnfKrS0bdVED2otBlJmWiQDSNKR79UQfQt946Ou0eE
+        3J9EREQzyn2R0A+i49xvlRNfHNNmc8pEhMYwSpu7Jz66CaIz+CyfiIga1yK7S1uHWeC+Qe4+X/a1eTxl
+        okJtvOA+lnEPhmrV1YVu28vdQURE1LTcFQbuXYKJ7xEE5jvut1TuQTAtQ1sWUtFVE++0BNEZ7tHQcjsT
+        ERFlvy47x++IDp14bkFgvuZrc6OnzdNKm+GUCbAs3Gtf6wfmBl+br6rAfNBtI7et5OYjIiIqXPN0777u
+        LW23ONjy3YKJS9Xcw43cZWujKRNnnnRPXlrZNXmZ5fnuC3rzdK/Po3OJiIi20YIu+zL3ABpPmxP8wJzp
+        heYTKjBf8sLoYqWjK93NbJQ29ylt1kw+nlZOwLXm/gz3Z9235c+Orpz4WSZ+JvOJiZ9RmxPaKr2t3D+f
+        iIioQbnfqt07CnMv79vP/ZY9odMc4d5hmBCak91v4F4Qnz75GOWz3F+7v9cSmJO2/nvuv9n630/+v/bl
+        rXkiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIi
+        IiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIi
+        IiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIqJ69v8AlEkFW2Eh
+        tVcAAAAASUVORK5CYII=
+</value>
+  </data>
   <data name="pictureBox2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAgAAAAIACAYAAAD0eNT6AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
@@ -1086,7 +1295,7 @@
   <data name="ButtonBack.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        vgAADr4B6kKxwAAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAESSURBVFhH7ddP
+        vAAADrwBlbxySQAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAESSURBVFhH7ddP
         LgRBFAfgIbEjJCwkOAGWXMGfLWFtxwk4gIW7uIOFuIYDsCUhNp8UXZPJM93TPSYykvq29ct7L13prupe
         r/ivsIsrrMa1YXCKC8zFtc5wiHffHrESM4NwU2WTW8zETGuheXYWc1lonq3FXCs1zZ+wHrNJTfM7zMbs
         SNjHWyiWmm/FbILrkE0esBCzI5XmoVhp/kNpHozdfAmvsRqOYjapPkrRB5ZjthUs4iVWxHHMJjiIwWqA
